# pyhocon-dantic

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
pyhocon_dantic/: __init__.py
scripts/: format-imports.sh  format.sh  lint.sh  test.sh  upload_pypi.sh
